24/10/2014:
	- Updated MINMAX command syntax in Task.cc to channel:min,max


22/10/2014:
	- Updated KakaduImage.cc to use Kakadu namespaces in version 7.5 and greater.


05/09/2014:
	- Updated IIIF info.json output to be compliant with changed IIIF 2.0 specification.


03/09/2014:
	- Fix to IIPImage.cc for file type detection for multispectral sequences.


22/08/2014:
	- Fix to properly read 12 bit JP2 files.
	- KakaduImage's virtual_levels counter moved into IIPImage class.
	- Modification to properly read number of components in multi-band JPEG2000 images.


21/08/2014:
	- Fixes to allow compilation on older versions of gcc.


20/08/2014:
	- Cleanup to IIIF code and some cosmetic improvements to generated JSON.
	- Added string escape function to URL class and moved all environment variable access to
	  Main.cc.


19/08/2014:
	- Added aspect ratio flag in View.h for use in CVT.cc. Also cleaned up Main.cc to remove
	  unnecesary logging and record extra http headers.
	- Added IIIF protocol version 2.0 support via the IIIF argument.


13/08/2014:
	- The rotate filter only ever operates on 8bit data, so remove if else type statements from
	  function - increases average function speed by about around 15%.
	- Added missing URL.h to src/Makefile.am.
	- Refactored JTL into 2 separate functions: run (parses arguments) & send (performs tile
	  request, processing and sending). Allows this to be re-used in other functions, such as
	  Zoomify.cc etc.
	- Refactored CVT similarly to JTL with now a separate send() function.


11/08/2014:
	- Renamed variable bpp in IIPImage and its derived classes to bpc (bits per channel),
	  which is more logical and how we have named things elsewhere.
	- Modification to TileManager, which was requesting more tiles than necessary for regions.
	- Changes to View.cc to make WID and HEI requests with region exports produce images with a
	  *final* size of that requested by WID or HEI. For example RGN=0.1,0.1,0.5,0.5&WID=500 will