@@ -40,10 +40,10 @@ void View::calculateResolution( unsigned int dimension,
 
   // Only set this if our requested resolution is greater than that
   // that has already been set.
-  if( (int)max_resolutions - (int)j + 1 < resolution ) resolution = (int)max_resolutions - (int)j + 1;
+  if( resolution > (int)max_resolutions - (int)j + 1 ) resolution = (int)max_resolutions - (int)j + 1;
 
   // Make sure our value is possible
-  if( resolution > (signed int)(max_resolutions - 1) ) resolution = max_resolutions - 1;
+  if( resolution > (signed int)(max_resolutions-1) ) resolution = max_resolutions - 1;
   if( resolution < 0 ) resolution = 0;
 
 }
@@ -58,29 +58,32 @@ unsigned int View::getResolution(){
   if( requested_width ) View::calculateResolution( width, round((float)requested_width/(float)view_width) );
   if( requested_height ) View::calculateResolution( height, round((float)requested_height/(float)view_height) );
 
+  res_width = width;
+  res_height = height;
+
   // Caluclate our new width and height based on the calculated resolution
-  for( i=0; i < (max_resolutions - resolution - 1); i++ ){
-    width = (int) width / 2;
-    height = (int) height / 2;
+  for( i=1; i < (max_resolutions - resolution); i++ ){
+    res_width = (int) floor(res_width / 2.0);
+    res_height = (int) floor(res_height / 2.0);
   }
 
   // Check if we need to use a smaller resolution due to our max size limit
   float scale = getScale();
 
-  if( (width*view_width*scale > max_size) || (height*view_height*scale > max_size) ){
+  if( (res_width*view_width*scale > max_size) || (res_height*view_height*scale > max_size) ){
     int dimension;
-    if( (width*view_width/max_size) > (height*view_width/max_size) ){
-      dimension = (int) (width*view_width*scale);
+    if( (res_width*view_width/max_size) > (res_height*view_width/max_size) ){
+      dimension = (int) (res_width*view_width*scale);
     }
     else{
-      dimension = (int) (height*view_height*scale);
+      dimension = (int) (res_height*view_height*scale);
     }
 
     i = 1;
     while( (dimension / i) > max_size ){
       dimension /= 2;
-      width = (int) (width / 2);
-      height = (int) (height / 2 );
+      res_width = (int) floor(width / 2.0);
+      res_height = (int) floor(height / 2.0 );
       resolution--;
     }
   }
@@ -95,18 +98,18 @@ float View::getScale(){
   unsigned int rw;
   unsigned int rh;
   if( requested_width == 0 && requested_height > 0 ){
-    rw = static_cast<unsigned int>( round(width * requested_height / height) );
+    rw = static_cast<unsigned int>( round(res_width * requested_height / res_height) );
   }
   else rw = requested_width;
 
   if( requested_height == 0 && requested_width > 0 ){
-    rh = static_cast<unsigned int>( round( height * requested_width / width ) );
+    rh = static_cast<unsigned int>( round( res_height * requested_width / res_width ) );
   }
   else rh = requested_height;
 
   float scale = static_cast<float>(rw) / static_cast<float>(width);
 
-  if( static_cast<float>(rh) / static_cast<float>(height) < scale ) scale = static_cast<float>(rh) / static_cast<float>(height);
+  if( static_cast<float>(rh) / static_cast<float>(res_height) < scale ) scale = static_cast<float>(rh) / static_cast<float>(res_height);
 
   // Sanity check
   if( scale <= 0 || scale > 1.0 ) scale = 1.0;
@@ -153,34 +156,42 @@ bool View::viewPortSet() {
 
 
 unsigned int View::getViewLeft(){
-  // Scale up our view to a real pixel value
-  unsigned int l = (unsigned int) round(width * view_left);
+  // Scale up our view to a real pixel value.
+  // Note that we calculate from our full resolution image to avoid errors from the rounding at each resolution size
+  unsigned int l = round( width*view_left/pow(2.0, max_resolutions-resolution-1) );
   return l;
 }
 
 
 unsigned int View::getViewTop(){
   // Scale up our view to a real pixel value
-  unsigned int t = (unsigned int) round(height * view_top );
+  // Note that we calculate from our full resolution image to avoid errors from the rounding at each resolution size
+  unsigned int t = round( height*view_top/pow(2.0, max_resolutions-resolution-1) );
   return t;
 }
 
 
 unsigned int View::getViewWidth(){
+
   // Scale up our viewport, then make sure our size is not too large or too small
-  unsigned int w = (unsigned int) round(width * view_width);
-  unsigned int left = (unsigned int) round(width * view_left);
-  if( (w + left) > width ) w = width - left;
+  unsigned int rw = width / pow(2.0, max_resolutions-resolution-1);
+  unsigned int w = round( view_width*rw );
+  unsigned int left = (unsigned int) round( view_left*rw );
+
+  if( (w + left) > rw ) w = rw - left;
   if( w < min_size ) w = min_size;
   return w;
 }
 
 
 unsigned int View::getViewHeight(){
+
   // Scale up our viewport, then make sure our size is not too large or too small
-  unsigned int h = (unsigned int) round(height * view_height);
-  unsigned int top = (unsigned int) round(height * view_top);
-  if( (h + top) > height ) h = height - top;
+  unsigned int rh = height / pow(2.0, max_resolutions-resolution-1);
+  unsigned int h = (unsigned int) round( view_height*rh );
+  unsigned int top = (unsigned int) round( view_top*rh );
+
+  if( (h + top) > rh ) h = rh - top;
   if( h < min_size ) h = min_size;
   return h;
 }
@@ -196,18 +207,12 @@ unsigned int View::getRequestWidth(){
       w = (unsigned int) round( (float)(getViewWidth()*requested_height) / (float)getViewHeight() );
     }
 
-    // If no width or height has been set, use our full size
+    // If no width or height has been set, use the full image size
     else if( requested_height==0 ) w = width;
   }
 
   // Limit our requested width to the maximum export size
   if( w > max_size ) w = max_size;
-
-  // If we have a region request, scale our request accordingly
-//   if( view_width < 1.0 ){
-//     float vw = (view_width + view_left > 1.0) ? 1.0 - view_left : view_width;
-//     return (unsigned int) round( requested_width * vw );
-//   }
 
   return w;
 }
@@ -223,18 +228,12 @@ unsigned int View::getRequestHeight(){
       h = (unsigned int) round( (float)(getViewHeight()*requested_width) / (float)getViewWidth() );
     }
 
-    // If no height has been set, use our full size
+    // If no width or height has been set, use the full image size
     else if( requested_width==0 ) h = height;
   }
 
   // Limit our requested height to the maximum export size
   if( h > max_size ) requested_height = max_size;
-
-  // If we have a region request, scale our request accordingly
-//   if( view_height < 1.0 ){
-//     float vh = (view_top + view_height > 1.0) ? 1.0 - view_top : view_height;
-//     return (unsigned int) round( requested_height * vh );
-//   }
 
   return h;
 }
